syntax = "proto3";

package RateLimiter;

service RateLimiterService {
  rpc GetRateLimits (EmptyRequest) returns (RateLimitResponse);
}

message EmptyRequest {}

message RateLimitResponse {
  repeated RateLimit rateLimits = 1;
}

message RateLimit {
  string route = 1;
  int32 requests_per_minute = 2;
}
